Fix alignments

--- a/themes/the-equity-fund/static/scss/app.css
+++ b/themes/the-equity-fund/static/scss/app.css
@@ -157,8 +157,10 @@
   }
 
   .gutenberg {
+    @apply px-site-padding;
+
     > *:not([data-block]) {
-      @apply mx-content-gutter max-w-article;
+      @apply mx-auto max-w-article;
     }
 
     /*
@@ -292,7 +294,8 @@
 
     .alignleft {
       @apply sm:clear-left sm:float-left sm:max-w-1/3 sm:m-4;
-      margin-left: theme('spacing.content-gutter');
+
+      margin-left: max(0px, calc((100% - theme('maxWidth.article')) / 2));
 
       @media (min-width: theme('screens.sm')) {
         width: calc(theme('maxWidth.article') / 3);
@@ -301,10 +304,8 @@
 
     .alignright {
       @apply sm:clear-right sm:float-right sm:max-w-1/3 sm:m-4;
-      margin-right: max(
-        theme('spacing.content-gutter'),
-        calc(100% - theme('maxWidth.article') - theme('spacing.content-gutter'))
-      );
+
+      margin-right: max(0px, calc((100% - theme('maxWidth.article')) / 2));
 
       @media (min-width: theme('screens.sm')) {
         width: calc(theme('maxWidth.article') / 3);
